add Dockerrun.aws.json, configure deploy with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,16 @@ after_success:
   - docker push ibaranga/multi-nginx
   - docker push ibaranga/multi-worker
 
-
-
+deploy:
+  provider: elasticbeanstalk
+  region: eu-central-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-central-1-448425806848
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
